--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@snapboard/platform",
   "version": "0.1.0",
   "description": "Snapboard public platform",
+  "repository": "https://github.com/snapboard/platform",
   "license": "UNLICENSED",
   "private": true,
   "workspaces": ["packages/*"],
