--- a/packages/core/.eslintrc
+++ b/packages/core/.eslintrc
@@ -9,7 +9,7 @@
   ],
   "parser":  "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "packages/platform/tsconfig.json"
+    "project": "packages/core/tsconfig.json"
   },
   "env": {
     "node": true,
