--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@snapboard/platform",
+  "name": "@snapboard/platform-core",
   "version": "0.1.0",
   "description": "Platform wrapper for Snapboard",
   "main": "dist/index.js",
   "author": "Calum Moore",
+  "repository": "https://github.com/snapboard/platform/tree/main/packages/core",
   "license": "MIT",
   "private": false,
   "devDependencies": {
