--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,5 +26,6 @@
     "axios": "^0.22.0",
     "handlebars": "^4.7.7",
     "lodash": "^4.17.21"
-  }
+  },
+  "gitHead": "7e5b62da5694ecb0f95108f886175495f4947643"
 }
