--- a/packages/platform-core/tsconfig.json
+++ b/packages/platform-core/tsconfig.json
@@ -4,8 +4,8 @@
 		"moduleResolution": "node",
 		"allowJs": true,
 		"resolveJsonModule": true,
-		"noEmit": true,
 		"strict": true,
+		"outDir": "lib",
 		"isolatedModules": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
