--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "workspaces": ["packages/*"],
   "scripts": {
     "clean": "rimraf ./node_modules ./packages/*/node_modules",
+    "build": "yarn lerna run build",
     "bootstrap": "lerna bootstrap --use-workspaces"
   },
   "dependencies": {
