--- a/packages/platform-core/package.json
+++ b/packages/platform-core/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "yarn tsc"
+    "build": "yarn tsc",
+    "prepublish": "yarn build"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -29,6 +30,9 @@
     "axios": "^0.22.0",
     "handlebars": "^4.7.7",
     "lodash": "^4.17.21"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "gitHead": "7e5b62da5694ecb0f95108f886175495f4947643"
 }
