--- a/packages/platform-core/package.json
+++ b/packages/platform-core/package.json
@@ -2,7 +2,7 @@
   "name": "@snapboard/platform-core",
   "version": "0.1.3",
   "description": "Platform wrapper for Snapboard",
-  "main": "lib/index.js",
+  "main": "lib/src/index.js",
   "author": "Calum Moore",
   "repository": "https://github.com/snapboard/platform/tree/main/packages/core",
   "license": "MIT",
