Update ts config

--- a/packages/platform-core/tsconfig.json
+++ b/packages/platform-core/tsconfig.json
@@ -1,6 +1,8 @@
 {
 	"compilerOptions": {
-		"target": "esnext",
+		"lib": ["es2020"],
+    "module": "commonjs",
+    "target": "es2020",
 		"moduleResolution": "node",
 		"allowJs": true,
 		"resolveJsonModule": true,
