--- a/packages/platform-core/.eslintrc
+++ b/packages/platform-core/.eslintrc
@@ -9,7 +9,7 @@
   ],
   "parser":  "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "packages/core/tsconfig.json"
+    "project": "packages/platform-core/tsconfig.json"
   },
   "env": {
     "node": true,
