--- a/packages/platform-core/tsconfig.json
+++ b/packages/platform-core/tsconfig.json
@@ -6,6 +6,7 @@
 		"allowJs": true,
 		"resolveJsonModule": true,
 		"declaration": true,
+		"sourceMap": true,
   	"emitDeclarationOnly": true,
 		"strict": true,
 		"isolatedModules": true,
