--- a/packages/platform-core/package.json
+++ b/packages/platform-core/package.json
@@ -12,6 +12,7 @@
     "build": "yarn clean && yarn build:js && yarn build:types",
     "build:js": "babel src --out-dir dist --extensions \".ts,.tsx\"",
     "build:types": "tsc --outDir dist --declaration  --emitDeclarationOnly --rootDir src",
+    "test": "yarn jest",
     "prepublish": "yarn build"
   },
   "devDependencies": {
@@ -22,6 +23,7 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-typescript": "^7.15.0",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.175",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
