--- a/packages/platform-core/package.json
+++ b/packages/platform-core/package.json
@@ -42,6 +42,7 @@
     "@babel/runtime": "^7.15.4",
     "@jsbits/get-package-version": "^1.0.3",
     "axios": "^0.22.0",
+    "fs-extra": "^10.0.0",
     "handlebars": "^4.7.7",
     "lodash": "^4.17.21"
   },
