--- a/packages/platform-core/package.json
+++ b/packages/platform-core/package.json
@@ -44,7 +44,8 @@
     "axios": "^0.22.0",
     "fs-extra": "^10.0.0",
     "handlebars": "^4.7.7",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "qs": "^6.10.1"
   },
   "publishConfig": {
     "access": "public"
