--- a/packages/platform-core/package.json
+++ b/packages/platform-core/package.json
@@ -24,18 +24,19 @@
     "@babel/preset-typescript": "^7.15.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
-    "@types/lodash": "^4.14.175",
+    "@types/lodash": "^4.14.176",
+    "@types/object-path": "^0.11.1",
     "@types/safe-json-stringify": "^1.1.2",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^8.0.1",
+    "eslint": "^8.1.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "jest": "^27.2.5",
+    "eslint-plugin-promise": "^5.1.1",
+    "jest": "^27.3.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.4.4"
   },
@@ -46,6 +47,7 @@
     "fs-extra": "^10.0.0",
     "handlebars": "^4.7.7",
     "lodash": "^4.17.21",
+    "object-path": "^0.11.8",
     "qs": "^6.10.1",
     "safe-json-stringify": "^1.2.0"
   },
