--- a/packages/platform-core/package.json
+++ b/packages/platform-core/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@babel/runtime": "^7.15.4",
     "@jsbits/get-package-version": "^1.0.3",
+    "@snapboard/errors": "^0.2.1",
     "axios": "^0.23.0",
     "fs-extra": "^10.0.0",
     "handlebars": "^4.7.7",
